--- a/index.html
+++ b/index.html
@@ -127,9 +127,8 @@
 							</ul>
 						</div>
             <div class="col-4 col-12-small">
-<!-- Bild austauschen & Link einfügen -->
-              <span class="image fit"><a href="#"><img src="images/fouque_bib.png" alt=""/></a></span>
-              <h3>Ganz bald: Niemegk</h3>
+              <span class="image fit"><img src="images/niemegk.jpg" alt=""/></span>
+              <h3>Niemegk</h3>
               <p>An jedem zweiten Dienstag im <a href="#">AWO Familienzentrum</a>, 16 - 18 Uhr.</p>
               <ul class="actions special">
 <!-- Link einfügen -->
