Add Niemegk Link

--- a/index.html
+++ b/index.html
@@ -127,12 +127,12 @@
 							</ul>
 						</div>
             <div class="col-4 col-12-small">
-              <span class="image fit"><img src="images/niemegk.jpg" alt=""/></span>
+              <span class="image fit"><a href="https://zen.coderdojo.com/dojos/de/niemegk/brandenburg-niemegk-awo-familienzentrum"><img src="images/niemegk.jpg" alt=""/></a></span>
               <h3>Niemegk</h3>
               <p>An jedem zweiten Dienstag im <a href="#">AWO Familienzentrum</a>, 16 - 18 Uhr.</p>
               <ul class="actions special">
 <!-- Link einfügen -->
-                <li><a href="#" class="button" target="_blank">Coming soon...</a></li>
+                <li><a href="https://zen.coderdojo.com/dojos/de/niemegk/brandenburg-niemegk-awo-familienzentrum" class="button" target="_blank">Anmelden</a></li>
               </ul>
             </div>
 						<div class="col-4 col-12-small">
