Wiesenburg new time and location

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 						<div class="col-4 col-12-small">
 							<span class="image fit"><a href="https://zen.coderdojo.com/dojos/de/bad-belzig/potsdam-mittelmark-bad-belzig-wiesenburg-brandenburg"><img src="images/trollberg.png" alt="" /></a></span>
 							<h3>Bad Belzig</h3>
-							<p>An jedem zweiten Freitag im <br><a href="https://awo-potsdam.de/standort/trollberg-bad-belzig/">AWO Familienzentrum im TRollberg</a>, 15 - 17 Uhr.</p>
+							<p>Jeden zweiten Freitag 15-17 Uhr <br>im AWO Familienzentrum im TRollberg</p>
 							<ul class="actions special">
 								<li><a href="https://zen.coderdojo.com/dojos/de/bad-belzig/potsdam-mittelmark-bad-belzig-wiesenburg-brandenburg" class="button" target="_blank">Anmelden</a></li>
 							</ul>
@@ -121,7 +121,7 @@
 						<div class="col-4 col-12-small">
 							<span class="image fit"><a href="https://zen.coderdojo.com/dojos/de/bad-belzig/potsdam-mittelmark-bad-belzig-wiesenburg-brandenburg"><img src="images/wiesenburg.png" alt="" /></a></span>
 							<h3>Wiesenburg</h3>
-							<p>An jedem zweiten Montag in der <a href="https://goo.gl/maps/5VcZFjH4MYwzZAuz7">Kunsthalle Wiesenburg</a>, 14 - 16 Uhr.</p>
+							<p>Jeden zweiten Montag 15-17 Uhr <br>im Co-Workingspace Gleis21</p>
 							<ul class="actions special">
 								<li><a href="https://zen.coderdojo.com/dojos/de/bad-belzig/potsdam-mittelmark-bad-belzig-wiesenburg-brandenburg" class="button" target="_blank">Anmelden</a></li>
 							</ul>
@@ -129,36 +129,34 @@
             <div class="col-4 col-12-small">
               <span class="image fit"><a href="https://zen.coderdojo.com/dojos/de/niemegk/brandenburg-niemegk-awo-familienzentrum"><img src="images/niemegk.jpg" alt=""/></a></span>
               <h3>Niemegk</h3>
-              <p>An jedem zweiten Dienstag im <a href="#">AWO Familienzentrum</a>, 16 - 18 Uhr.</p>
+              <p>Jeden zweiten Dienstag 16-18 Uhr <br>im AWO Familienzentrum</p>
               <ul class="actions special">
-<!-- Link einfügen -->
                 <li><a href="https://zen.coderdojo.com/dojos/de/niemegk/brandenburg-niemegk-awo-familienzentrum" class="button" target="_blank">Anmelden</a></li>
               </ul>
             </div>
 						<div class="col-4 col-12-small">
 							<span class="image fit"><a href="https://zen.coderdojo.com/dojos/de/brandenburg-an-der-havel/brandenburg-an-der-havel-fouque-bibliothek"><img src="images/fouque_bib.png" alt="" /></a></span>
 							<h3>Brandenburg an der Havel</h3>
-							<p>An jedem zweiten Dienstag in der <a href="https://bibliothek.stadt-brandenburg.de/">Fouqué-Bibliothek Brandenburg</a>, 16 - 18 Uhr.</p>
+							<p>Jeden zweiten Dienstag 16-18 Uhr <br>in der Fouqué-Bibliothek Brandenburg</p>
 							<ul class="actions special">
 								<li><a href="https://zen.coderdojo.com/dojos/de/brandenburg-an-der-havel/brandenburg-an-der-havel-fouque-bibliothek" class="button" target="_blank">Anmelden</a></li>
 							</ul>
 						</div>
-
 						<div class="col-4 col-12-small">
 							<span class="image fit"><a href="https://zen.coderdojo.com/dojos/de/frankfurt-oder/frankfurt-oder"><img src="images/pic02.png" alt="" /></a></span>
 							<h3>Frankfurt (Oder)</h3>
-							<p>An jedem vierten Samstag im Monat im <br><a href="https://blok-o.de">Blok O</a>, 14 - 17 Uhr.</p>
+							<p>Jeden vierten Samstag im Monat 14-17 Uhr <br>im <a href="https://blok-o.de">Blok O</a>.</p>
 							<p><i>Momentan pausiert - hoffentlich bald wieder!</i></p>
 							<ul class="actions special">
 								<li><a href="https://zen.coderdojo.com/dojos/de/frankfurt-oder/frankfurt-oder" class="button" target="_blank">Anmelden</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-small">
-							<span class="image fit"><a href="https://zen.coderdojo.com/dojos/de/letschin/oderbruch"><img src="images/pic03.jpg" alt="" /></a></span>
+							<span class="image fit"><a href="https://zen.coderdojo.com/dojos/de/letschin/oderbruch"><img src="images/pic03.jpg" alt=""/></a></span>
 							<h3>Letschin</h3>
-							<p>An jedem vierten Freitag im Monat im <a href="https://coworking-oderbruch.de">Coworking Oderbruch</a>, 14 - 17 Uhr.</p>
+							<p>Jeden vierten Freitag im Monat 14-17 Uhr <br>im <a href="https://coworking-oderbruch.de">Coworking Oderbruch</a>.</p>
               <p><i>Momentan pausiert - hoffentlich bald wieder!</i></p>
-							<p><strong>Wir suchen noch ehrenamtliche Mentor*innen in Letschin!</strong></p>
+							<!-- <p><strong>Wir suchen noch ehrenamtliche Mentor*innen in Letschin!</strong></p> -->
 							<ul class="actions special">
 								<li><a href="https://zen.coderdojo.com/dojos/de/letschin/oderbruch" class="button primary" target="_blank">Mitmachen</a></li>
 							</ul>
@@ -166,9 +164,9 @@
 						<div class="col-4 col-12-small">
 							<span class="image fit"><a href="https://zen.coderdojo.com/dojos/de/beeskow/beeskow"><img src="images/pic04.png" alt="" /></a></span>
 							<h3>Beeskow</h3>
-							<p>An jedem ersten Samstag im Monat in der <a href="https://burg-beeskow.de">Burg Beeskow</a>, 14 - 17 Uhr.</p>
+							<p>Jeden ersten Samstag im Monat 14-17 Uhr <br>in der <a href="https://burg-beeskow.de">Burg Beeskow</a>.</p>
 							<p><i>Momentan pausiert - hoffentlich bald wieder!</i></p>
-              <p><strong>Wir suchen noch ehrenamtliche Mentor*innen in Beeskow!</strong></p>
+              <!-- <p><strong>Wir suchen noch ehrenamtliche Mentor*innen in Beeskow!</strong></p> -->
 							<ul class="actions special">
 								<li><a href="https://zen.coderdojo.com/dojos/de/beeskow/beeskow" class="button primary" target="_blank">Mitmachen</a></li>
 							</ul>
