--- a/material.html
+++ b/material.html
@@ -17,7 +17,6 @@
 		<!-- Header -->
 			<section id="header">
 				<div class="inner"> 
-					<!--<span class="icon solid major fa-cloud"></span> -->
 					<h1>CoderDojo Oder-Spree</h1>
 					<p>#oderdojo</p><br>
 					<ul class="icons">
@@ -36,54 +35,39 @@
 		<!-- One -->
 			<section id="one" class="main style1">
 				<div class="container">
-					<div class="row gtr-150">
-						<div class="col-8 col-12-small">
-							<header class="major">
-								<h2>Lernmaterial für Dein Dojo</h2>
-							</header>
-							<p>Hier eine Sammlung von Materialien, mit denen ihr euch beim Dojo (und natürlich auch jederzeit zu Hause) beschäftigen könnt.</p>
-						</div>
-						<div class="col-4 col-12-small imp-medium">
-							<span class="image fit"><img src="images/pic01.png" alt="" /></span>
-						</div>
+					<div class="col-8 col-12-small">
+							<h4>Hier findest du eine Sammlung an Lernmaterialien, mit denen du dich während des CoderDojos
+              (und natürlich auch jederzeit zu Hause) beschäftigen kannst.</h4>
+					</div>
+
 					<div class="row gtr-150">	
 						<div class="col-12 col-12-small">
-							
-<h2 id="zum-einstieg">Zum Einstieg</h2>
+              <h2>Zum Einstieg</h2>
+                <p>Wenn ihr noch nie selber programmiert habt, könnt ihr mit einem der folgenden Spiele anfangen:</p>
+                <p><a href="https://programmieren.wdrmaus.de/lernspiel/00">Programmieren lernen mit der Maus</a>
+                <br><a href="http://coderdojo-linz.github.io/trainingsanleitungen/scratch/hour-of-code.html"><em>Hour of Code Programmierspiele</em></a> mit Angry Birds, Anna und Elsa, Star Wars oder Minecraft
+                <br><a href="https://studio.code.org/s/dance/stage/1/puzzle/1"><em>Hour of Code Tanzparty</em></a>
+                <br>Hier gibt es sogar was <a href="https://studio.code.org/s/course1/stage/4/puzzle/1">für die ganz Kleinen</a>, die noch gar nicht lesen können.</p>
 
-<p>Wenn ihr noch nie selber programmiert habt, könnt ihr mit einem der folgenden Spiele anfangen:</p>
+              <h2 id="anfängerinnen">Anfänger*innen</h2>
+                <p>Wenn ihr lieber direkt selber programmieren wollt, könnt ihr mit Scratch loslegen:</p>
+                <br><p><a href="http://coderdojo-linz.github.io/infos/uebungsbeispiele.html">Scratch Projekte</a> vom CoderDojo Linz
+                <br><a href="https://projects.raspberrypi.org/de-DE/projects?software%5B%5D=scratch">CoderDojo Scratch Projekte</a>
+                Kopien aus dem <a href="https://www.thalia.de/shop/home/artikeldetails/ID64483962.html">Programmieren für Kids</a> Buch</p>
 
-<p><a href="https://programmieren.wdrmaus.de/lernspiel/00">Programmieren lernen mit der Maus</a><br />
-<a href="http://coderdojo-linz.github.io/trainingsanleitungen/scratch/hour-of-code.html"><em>Hour of Code</em> Programmierspiele</a> mit Angry Birds, Anna und Elsa, Star Wars oder Minecraft<br />
-<a href="https://studio.code.org/s/dance/stage/1/puzzle/1"><em>Hour of Code</em> Tanzparty</a><br>
-Hier gibt es sogar was <a href="https://studio.code.org/s/course1/stage/4/puzzle/1">für die ganz Kleinen</a>, die noch gar nicht lesen können.</p>
 
-<h2 id="anfängerinnen">Anfänger*innen</h2>
-
-<p>Wenn ihr lieber direkt selber programmieren wollt, könnt ihr mit Scratch loslegen:</p>
-
-<p><a href="http://coderdojo-linz.github.io/infos/uebungsbeispiele.html">Scratch Projekte</a> vom CoderDojo Linz<br />
-<a href="https://projects.raspberrypi.org/de-DE/projects?software%5B%5D=scratch">CoderDojo Scratch Projekte</a><br />
-Kopien aus dem <a href="https://www.thalia.de/shop/home/artikeldetails/ID64483962.html">Programmieren für Kids</a> Buch</p>
-
-<h3 id="hardware">Hardware</h3>
-
-<p><a href="https://calliope.cc/los-geht-s/erste-schritte">Calliope Mini</a><br />
-	<a href="https://makeymakey.com/blogs/how-to-instructions/apps-for-plug-and-play">Makey Makey</a><br>
-<a href="https://www.progbob.org/">BOB3</a> <br />
-<a href="https://projects.raspberrypi.org/de-DE/projects/raspberry-pi-setting-up">Raspberry Pi</a></p>
-
-<h2 id="fortgeschrittene">Fortgeschrittene</h2>
-
-<p>Wenn ihr schonmal ein bisschen programmiert habt und etwas Neues ausprobieren wollt, könnt ihr hier schauen:</p>
-
-<h3 id="programmiersprachen">Programmiersprachen</h3>
-
-<p><a href="https://projects.raspberrypi.org/de-DE/projects">Weitere CoderDojo Projekte</a><br />
-<a href="https://projects.raspberrypi.org/de-DE/projects/about-me">Python</a> spielerisch<br />
-<a href="http://opentechschool.github.io/python-beginners/de/index.html">Python</a> etwas formaler<br />
-<a href="https://projects.raspberrypi.org/de-DE/projects?software[]=html-css-javascript">Webseiten mit HTML &amp; CSS</a></p>
-
+              <h2 id="fortgeschrittene">Fortgeschrittene</h2>
+                <p>Wenn ihr schonmal ein bisschen programmiert habt und etwas Neues ausprobieren wollt, könnt ihr hier schauen:</p>
+                <h3 id="programmiersprachen">Programmiersprachen</h3>
+                  <p><a href="https://projects.raspberrypi.org/de-DE/projects">Weitere CoderDojo Projekte</a>
+                  <br><a href="https://projects.raspberrypi.org/de-DE/projects/about-me">Python</a> spielerisch
+                  <br><a href="http://opentechschool.github.io/python-beginners/de/index.html">Python</a> etwas formaler
+                  <br><a href="https://projects.raspberrypi.org/de-DE/projects?software[]=html-css-javascript">Webseiten mit HTML &amp; CSS</a></p>
+                <h3 id="hardware">Hardware-Projekte</h3>
+                  <p><a href="https://calliope.cc/los-geht-s/erste-schritte">Calliope Mini</a>
+                  <br><a href="https://makeymakey.com/blogs/how-to-instructions/apps-for-plug-and-play">Makey Makey</a>
+                  <br><a href="https://www.progbob.org/">BOB3</a>
+                  <br><a href="https://projects.raspberrypi.org/de-DE/projects/raspberry-pi-setting-up">Raspberry Pi</a></p>
 						</div>
 					</div>
 				</div>
