--- a/material.html
+++ b/material.html
@@ -46,6 +46,7 @@
                 <p>Wenn ihr noch nie selber programmiert habt, könnt ihr mit einem der folgenden Spiele anfangen:</p>
                 <p><a href="https://programmieren.wdrmaus.de/lernspiel/00">Programmieren lernen mit der Maus</a>
                 <br><a href="http://coderdojo-linz.github.io/trainingsanleitungen/scratch/hour-of-code.html"><em>Hour of Code Programmierspiele</em></a> mit Angry Birds, Anna und Elsa, Star Wars oder Minecraft
+                <br>Hier gibt es noch ein zweites <a href="https://studio.code.org/s/aquatic/lessons/1/levels/1">Minecraft Spiel</a>
                 <br><a href="https://studio.code.org/s/dance/stage/1/puzzle/1"><em>Hour of Code Tanzparty</em></a>
                 <br>Hier gibt es sogar was <a href="https://studio.code.org/s/course1/stage/4/puzzle/1">für die ganz Kleinen</a>, die noch gar nicht lesen können.</p>
 
@@ -53,7 +54,7 @@
                 <p>Wenn ihr lieber direkt selber programmieren wollt, könnt ihr mit Scratch loslegen:</p>
                 <br><p><a href="http://coderdojo-linz.github.io/infos/uebungsbeispiele.html">Scratch Projekte</a> vom CoderDojo Linz
                 <br><a href="https://projects.raspberrypi.org/de-DE/projects?software%5B%5D=scratch">CoderDojo Scratch Projekte</a>
-                Kopien aus dem <a href="https://www.thalia.de/shop/home/artikeldetails/ID64483962.html">Programmieren für Kids</a> Buch</p>
+                <br>Kopien aus dem <a href="https://www.thalia.de/shop/home/artikeldetails/ID64483962.html">Programmieren für Kids</a> Buch</p>
 
 
               <h2 id="fortgeschrittene">Fortgeschrittene</h2>
