--- a/material.html
+++ b/material.html
@@ -48,7 +48,7 @@
                 <br><a href="http://coderdojo-linz.github.io/trainingsanleitungen/scratch/hour-of-code.html"><em>Hour of Code Programmierspiele</em></a> mit Angry Birds, Anna und Elsa, Star Wars oder Minecraft
                 <br>Hier gibt es noch ein zweites <a href="https://studio.code.org/s/aquatic/lessons/1/levels/1">Minecraft Spiel</a>
                 <br><a href="https://studio.code.org/s/dance/stage/1/puzzle/1"><em>Hour of Code Tanzparty</em></a>
-                <br>Hier gibt es sogar was <a href="https://studio.code.org/s/course1/stage/4/puzzle/1">für die ganz Kleinen</a>, die noch gar nicht lesen können.</p>
+                <br>Hier gibt es sogar was <a href="https://studio.code.org/s/course1/stage/4/puzzle/1">für die ganz Kleinen</a>, die noch gar <a href="https://studio.code.org/s/pre-express-2019">nicht lesen</a> können.</p>
 
               <h2 id="anfängerinnen">Anfänger*innen</h2>
                 <p>Wenn ihr lieber direkt selber programmieren wollt, könnt ihr mit Scratch loslegen:</p>
