--- a/material.html
+++ b/material.html
@@ -33,7 +33,21 @@
 			</section>
 
 		<!-- One -->
-			<section id="one" class="main style1">
+      <section class="main style2">
+          <div class="container">
+            <div class="col-4 col-12-small">
+              <span class="image left"><img src="images/coderdojo_weihnachten.png" alt="" /></span>
+              <h3>Weihnachtsspecial!</h3>
+              <p>Jetzt Weihnachtsspiel programmieren und Zuhause gegen deine Familie spielen!</p>
+              <ul class="actions special1">
+                <li><a href="https://linz.coderdojo.net/uebungsanleitungen/programmieren/scratch/weihnachten-2016/" class="button primary">Hier geht's zur Anleitung!</a></li>
+              </ul>
+            </div>
+          </div>
+        </section>
+
+
+      <section id="one" class="main style1">
 				<div class="container">
 					<div class="col-8 col-12-small">
 							<h4>Hier findest du eine Sammlung an Lernmaterialien, mit denen du dich während des CoderDojos
