link minecraft auf deutsch

--- a/material.html
+++ b/material.html
@@ -60,7 +60,7 @@
                 <p>Wenn ihr noch nie selber programmiert habt, könnt ihr mit einem der folgenden Spiele anfangen:</p>
                 <p><a href="https://programmieren.wdrmaus.de/lernspiel/00">Programmieren lernen mit der Maus</a>
                 <br><a href="http://coderdojo-linz.github.io/trainingsanleitungen/scratch/hour-of-code.html"><em>Hour of Code Programmierspiele</em></a> mit Angry Birds, Anna und Elsa, Star Wars oder Minecraft
-                <br>Hier gibt es noch ein zweites <a href="https://studio.code.org/s/aquatic/lessons/1/levels/1">Minecraft Spiel</a>
+                <br>Hier gibt es noch ein zweites <a href="https://studio.code.org/s/aquatic/lessons/1/levels/1?lang=de-DE">Minecraft Spiel</a>
                 <br><a href="https://studio.code.org/s/dance/stage/1/puzzle/1"><em>Hour of Code Tanzparty</em></a>
                 <br>Hier gibt es sogar was <a href="https://studio.code.org/s/course1/stage/4/puzzle/1">für die ganz Kleinen</a>, die noch gar <a href="https://studio.code.org/s/pre-express-2019">nicht lesen</a> können.</p>
 
