--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 						<div class="col-4 col-12-small">
 							<span class="image fit"><a href="https://zen.coderdojo.com/dojos/de/bad-belzig/potsdam-mittelmark-bad-belzig-wiesenburg-brandenburg"><img src="images/wiesenburg.png" alt="" /></a></span>
 							<h3>Wiesenburg</h3>
-							<p>Jeden zweiten Montag 15-17 Uhr <br>im Co-Workingspace Gleis21</p>
+							<p>Jeden zweiten Montag 14-16 Uhr <br>in der Kunsthalle</p>
 							<ul class="actions special">
 								<li><a href="https://zen.coderdojo.com/dojos/de/bad-belzig/potsdam-mittelmark-bad-belzig-wiesenburg-brandenburg" class="button" target="_blank">Anmelden</a></li>
 							</ul>
