--- a/index.html
+++ b/index.html
@@ -142,6 +142,14 @@
 								<li><a href="https://zen.coderdojo.com/dojos/de/brandenburg-an-der-havel/brandenburg-an-der-havel-fouque-bibliothek" class="button" target="_blank">Anmelden</a></li>
 							</ul>
 						</div>
+            <div class="col-4 col-12-small">
+              <span class="image fit"><a href="https://www.stiftung-job.de/freizeit-mehr/mobile-jugendarbeit-michendorf/"><img src="images/michendorf.jpg" alt="" /></a></span>
+              <h3>Michendorf</h3>
+              <p>Jeden zweiten Donnerstag 15-17 Uhr <br>im Jugendtreff Michendorf</p>
+              <ul class="actions special">
+                <li><a href="https://www.stiftung-job.de/freizeit-mehr/mobile-jugendarbeit-michendorf/" class="button" target="_blank">Anfahrt & Kontakt</a></li>
+              </ul>
+            </div>
 						<div class="col-4 col-12-small">
 							<span class="image fit"><a href="https://zen.coderdojo.com/dojos/de/frankfurt-oder/frankfurt-oder"><img src="images/pic02.png" alt="" /></a></span>
 							<h3>Frankfurt (Oder)</h3>
