--- a/material.html
+++ b/material.html
@@ -33,6 +33,36 @@
 			</section>
 
 		<!--  -->
+    <section>
+      <div class="container">
+        <div class="row gtr-150">
+          <div class="col-3 col-12-xsmall">
+            <span class="image fit" style="width: 150px">
+              <img src="images/Scratchlogo.png" alt="Scratch" style="object-fit: contain">
+              <a href="https://scratch.mit.edu/" target="_blank">Direkt zu Scratch</a>
+            </span>
+          </div>
+           <div class="col-3 col-12-xsmall">
+            <span class="image fit" style="width: 150px">
+              <img src="images/trinket-logo.png" alt="trinket" style="object-fit: contain">
+              <a href="https://trinket.io/" target="_blank">Direkt zu trinket.io</a>
+            </span>
+          </div>
+          <div class="col-3 col-12-xsmall">
+            <span class="image fit" style="width: 150px">
+              <img src="images/calliope.png" alt="trinket" style="object-fit: contain">
+              <a href="https://calliope.cc/projekte" target="_blank">Projekte mit dem Calliope</a>
+            </span>
+          </div>
+          <div class="col-3 col-12-xsmall">
+            <span class="image fit" style="width: 150px">
+              <img src="images/minecraft.webp" alt="trinket" style="object-fit: contain">
+              <a href="https://code.org/minecraft" target="_blank">Minecraft Tutorials</a>
+            </span>
+          </div>
+        </div>
+      </div>
+    </section>
 
       <section id="one" class="main style1">
 				<div class="container">
