--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
 					<div class="row gtr-150">
 						<div class="col-4 col-12-small">
-							<span class="image fit"><a href="https://zen.coderdojo.com/dojos/de/bad-belzig/potsdam-mittelmark-bad-belzig-wiesenburg-brandenburg"><img src="images/trollberg.png" alt="" /></a></span>
+							<span class="image city"><a href="https://zen.coderdojo.com/dojos/de/bad-belzig/potsdam-mittelmark-bad-belzig-wiesenburg-brandenburg"><img src="images/trollberg.png" alt="" /></a></span>
 							<h3>Bad Belzig</h3>
 							<p>Jeden zweiten Freitag 15-17 Uhr <br>im AWO Familienzentrum im TRollberg</p>
 							<ul class="actions special">
@@ -119,7 +119,7 @@
 							</ul>
 						</div>
 						<div class="col-4 col-12-small">
-							<span class="image fit"><a href="https://zen.coderdojo.com/dojos/de/bad-belzig/potsdam-mittelmark-bad-belzig-wiesenburg-brandenburg"><img src="images/wiesenburg.png" alt="" /></a></span>
+							<span class="image city"><a href="https://zen.coderdojo.com/dojos/de/bad-belzig/potsdam-mittelmark-bad-belzig-wiesenburg-brandenburg"><img src="images/wiesenburg.png" alt="" /></a></span>
 							<h3>Wiesenburg</h3>
 							<p>Jeden zweiten Montag 14-16 Uhr <br>in der Kunsthalle</p>
 							<ul class="actions special">
@@ -127,7 +127,7 @@
 							</ul>
 						</div>
             <div class="col-4 col-12-small">
-              <span class="image fit"><a href="https://zen.coderdojo.com/dojos/de/niemegk/brandenburg-niemegk-awo-familienzentrum"><img src="images/niemegk.jpg" alt=""/></a></span>
+              <span class="image city"><a href="https://zen.coderdojo.com/dojos/de/niemegk/brandenburg-niemegk-awo-familienzentrum"><img src="images/niemegk.jpg" alt=""/></a></span>
               <h3>Niemegk</h3>
               <p>Jeden zweiten Dienstag 16-18 Uhr <br>im AWO Familienzentrum</p>
               <ul class="actions special">
@@ -135,7 +135,7 @@
               </ul>
             </div>
 						<div class="col-4 col-12-small">
-							<span class="image fit"><a href="https://zen.coderdojo.com/dojos/de/brandenburg-an-der-havel/brandenburg-an-der-havel-fouque-bibliothek"><img src="images/fouque_bib.png" alt="" /></a></span>
+							<span class="image city"><a href="https://zen.coderdojo.com/dojos/de/brandenburg-an-der-havel/brandenburg-an-der-havel-fouque-bibliothek"><img src="images/fouque_bib.png" alt="" /></a></span>
 							<h3>Brandenburg an der Havel</h3>
 							<p>Jeden zweiten Dienstag 16-18 Uhr <br>in der Fouqué-Bibliothek Brandenburg</p>
 							<ul class="actions special">
@@ -143,7 +143,7 @@
 							</ul>
 						</div>
             <div class="col-4 col-12-small">
-              <span class="image fit"><a href="https://www.stiftung-job.de/freizeit-mehr/mobile-jugendarbeit-michendorf/"><img src="images/michendorf.jpg" alt="" /></a></span>
+              <span class="image city"><a href="https://www.stiftung-job.de/freizeit-mehr/mobile-jugendarbeit-michendorf/"><img src="images/michendorf.jpg" alt="" /></a></span>
               <h3>Michendorf</h3>
               <p>Jeden zweiten Donnerstag 15-17 Uhr <br>im Jugendtreff Michendorf</p>
               <ul class="actions special">
@@ -151,7 +151,7 @@
               </ul>
             </div>
 						<div class="col-4 col-12-small">
-							<span class="image fit"><a href="https://zen.coderdojo.com/dojos/de/frankfurt-oder/frankfurt-oder"><img src="images/pic02.png" alt="" /></a></span>
+							<span class="image city"><a href="https://zen.coderdojo.com/dojos/de/frankfurt-oder/frankfurt-oder"><img src="images/pic02.png" alt="" /></a></span>
 							<h3>Frankfurt (Oder)</h3>
 							<p>Jeden vierten Samstag im Monat 14-17 Uhr <br>im <a href="https://blok-o.de">Blok O</a>.</p>
 							<p><i>Momentan pausiert - hoffentlich bald wieder!</i></p>
@@ -160,7 +160,7 @@
 							</ul>
 						</div>
 						<div class="col-4 col-12-small">
-							<span class="image fit"><a href="https://zen.coderdojo.com/dojos/de/letschin/oderbruch"><img src="images/pic03.jpg" alt=""/></a></span>
+							<span class="image city"><a href="https://zen.coderdojo.com/dojos/de/letschin/oderbruch"><img src="images/pic03.jpg" alt=""/></a></span>
 							<h3>Letschin</h3>
 							<p>Jeden vierten Freitag im Monat 14-17 Uhr <br>im <a href="https://coworking-oderbruch.de">Coworking Oderbruch</a>.</p>
               <p><i>Momentan pausiert - hoffentlich bald wieder!</i></p>
@@ -170,7 +170,7 @@
 							</ul>
 						</div>
 						<div class="col-4 col-12-small">
-							<span class="image fit"><a href="https://zen.coderdojo.com/dojos/de/beeskow/beeskow"><img src="images/pic04.png" alt="" /></a></span>
+							<span class="image city"><a href="https://zen.coderdojo.com/dojos/de/beeskow/beeskow"><img src="images/pic04.png" alt="" /></a></span>
 							<h3>Beeskow</h3>
 							<p>Jeden ersten Samstag im Monat 14-17 Uhr <br>in der <a href="https://burg-beeskow.de">Burg Beeskow</a>.</p>
 							<p><i>Momentan pausiert - hoffentlich bald wieder!</i></p>
@@ -246,53 +246,59 @@
 			<section id="four" class="main style1 special">
 				<div class="container">
 					<header class="major">
-						<h2>Unsere Unterstützer*innen und Förderer</h2>
+						<h2>Unsere Förderer und Unterstützer*innen</h2>
 					</header>
 					<p>Wir freuen uns sehr, vor Ort mit diesen wunderbaren Organisationen zusammenarbeiten zu können!</p>
 					<div class="row gtr-150">
-						<div class="col-4 col-12-xsmall">
-						<span class="image fit"><img src="images/bloko.png"  ></span>
-						<p><a href="https://blok-o.de">Blok O</a></p> 
+            <div class="col-3 col-12-xsmall">
+              <span class="image fit"><img src="images/Logo_Dsee.png"></span>
+              <p><a href="https://www.deutsche-stiftung-engagement-und-ehrenamt.de/foerderung/bildungsturbo/">DSEE</a></p>
+            </div>
+            <div class="col-3 col-12-xsmall">
+              <span class="image fit"><img src="images/de.png" ></span>
+              <p><a href="https://www.digitalengagiert.de/"></a>Digital engagiert</p>
+            </div>
+            <div class="col-3 col-12-xsmall">
+              <span class="image fit"><img src="images/Logo_pfd.jpeg"></span>
+              <p><a href="https://lap-hoher-flaeming.de/">PfD Hoher Fläming</a></p>
+            </div>
+            <div class="col-3 col-12-xsmall">
+              <span class="image fit"><img src="images/Logo_tgz.png"></span>
+              <p><a href="https://tgz.pm/">TGZ PM</a></p>
+            </div>
+						<div class="col-3 col-12-xsmall">
+						  <span class="image fit"><img src="images/bloko.png"></span>
+						  <p><a href="https://blok-o.de">Blok O</a></p>
 						</div>
-						<div class="col-4 col-12-xsmall">
-						<span class="image fit"><img src="images/oderbruch.png" ></span>
-						<p><a href="https://coworking-oderbruch.de">Coworking Oderbruch</a></p> 
+						<div class="col-3 col-12-xsmall">
+						  <span class="image fit"><img src="images/oderbruch.png" ></span>
+						  <p><a href="https://coworking-oderbruch.de">Coworking Oderbruch</a></p>
 						</div>
-						<div class="col-4 col-12-xsmall">
+						<div class="col-3 col-12-xsmall">
 							<span class="image fit"><img src="images/pier13.jpg"></span>
-						<p><a href="https://blok-o.de">Jugend-Team Beeskow</a></p> 
-						</div>
-					</div>
-					<div class="row gtr-150">
-						<div class="col-3 col-12-xsmall">
-						<span class="image fit"><img src="images/jim.jpg" ></span>
-						<p><a href="https://blok-o.de">JiM Frankfurt</a></p> 
+						  <p><a href="https://blok-o.de">Jugend-Team Beeskow</a></p>
 						</div>
 						<div class="col-3 col-12-xsmall">
-						<span class="image fit"><img src="images/burg.png" ></span>
-						<p><a href="https://burg-beeskow.de">Burg Beeskow</a></p> 
+						  <span class="image fit"><img src="images/jim.jpg" ></span>
+						  <p><a href="https://blok-o.de">JiM Frankfurt</a></p>
 						</div>
 						<div class="col-3 col-12-xsmall">
-						<span class="image fit"><img src="images/oberholz.png" ></span>
-						<p><a href="https://st-oberholz.de">St. Oberholz</a></p> 
+						  <span class="image fit"><img src="images/burg.png" ></span>
+						  <p><a href="https://burg-beeskow.de">Burg Beeskow</a></p>
 						</div>
 						<div class="col-3 col-12-xsmall">
-						<span class="image fit"><img src="images/tsb.jpg" ></span>
-						<p><a href="https://technologiestiftung-berlin.de">Technologiestiftung Berlin</a></p> 
+						  <span class="image fit"><img src="images/oberholz.png" ></span>
+						  <p><a href="https://st-oberholz.de">St. Oberholz</a></p>
+						</div>
+						<div class="col-3 col-12-xsmall">
+						  <span class="image fit"><img src="images/tsb.jpg" ></span>
+						  <p><a href="https://technologiestiftung-berlin.de">Technologiestiftung Berlin</a></p>
 						</div>
 					</div>
 					<br>
-					<div class="row gtr-150">
-						<div class="col-2 col-12-xsmall">
-						<span class="image fit"><a href="https://neuland21.de"><img src="images/n21.png" ></a></span>
-						</div>
-						<div class="col-8 col-12-xsmall">
-						<br>
-						<p>Das CoderDojo Oder-Spree ist ein Projekt von <a href="https://neuland21.de">Neuland 21 e.V.</a> und <a href="https://coderdojo-deutschland.de">CoderDojo Deutschland e.V.</a> und wurde 2019 gefördert von <a href="https://www.digitalengagiert.de/">digital.engagiert</a>.</p> 
-						</div>
-						<div class="col-2 col-12-xsmall">
-						<span class="image fit"><a href="https://www.digitalengagiert.de/"><img src="images/de.png" ></a></span>
-						</div>
+					<div class="col-4 col-12-xsmall">
+					  <span class="image fit"><a href="https://neuland21.de"><img src="images/n21.png" ></a></span>
+					  <p>Das CoderDojo Brandenburg ist ein Projekt von <a href="https://neuland21.de">Neuland 21 e.V.</a> und <a href="https://coderdojo-deutschland.de">CoderDojo Deutschland e.V.</a>.</p>
 					</div>
 				</div>
 			</section>
