ein paar Ergänzungen

--- a/index.html
+++ b/index.html
@@ -153,8 +153,7 @@
 						<div class="col-4 col-12-small">
 							<span class="image city"><a href="https://zen.coderdojo.com/dojos/de/frankfurt-oder/frankfurt-oder"><img src="images/pic02.png" alt="" /></a></span>
 							<h3>Frankfurt (Oder)</h3>
-							<p>Jeden vierten Samstag im Monat 14-17 Uhr <br>im <a href="https://blok-o.de">Blok O</a>.</p>
-							<p><i>Momentan pausiert - hoffentlich bald wieder!</i></p>
+							<p>Jeden zweiten Samstag im Monat 14-17 Uhr <br>im <a href="https://blok-o.de">Blok O</a>. <br> <i>Dieses Mal beim Tag der offenen Tür am IHP!</i> </p>
 							<ul class="actions special">
 								<li><a href="https://zen.coderdojo.com/dojos/de/frankfurt-oder/frankfurt-oder" class="button" target="_blank">Anmelden</a></li>
 							</ul>
@@ -162,8 +161,8 @@
 						<div class="col-4 col-12-small">
 							<span class="image city"><a href="https://zen.coderdojo.com/dojos/de/letschin/oderbruch"><img src="images/pic03.jpg" alt=""/></a></span>
 							<h3>Letschin</h3>
-							<p>Jeden vierten Freitag im Monat 14-17 Uhr <br>im <a href="https://coworking-oderbruch.de">Coworking Oderbruch</a>.</p>
-              <p><i>Momentan pausiert - hoffentlich bald wieder!</i></p>
+							<!-- <p>Jeden vierten Freitag im Monat 14-17 Uhr <br>im <a href="https://coworking-oderbruch.de">Coworking Oderbruch</a>.</p> -->
+              <p><i>Momentan pausiert - Wir brauchen noch Unterstützer*innen!</i></p>
 							<!-- <p><strong>Wir suchen noch ehrenamtliche Mentor*innen in Letschin!</strong></p> -->
 							<ul class="actions special">
 								<li><a href="https://zen.coderdojo.com/dojos/de/letschin/oderbruch" class="button primary" target="_blank">Mitmachen</a></li>
@@ -172,8 +171,8 @@
 						<div class="col-4 col-12-small">
 							<span class="image city"><a href="https://zen.coderdojo.com/dojos/de/beeskow/beeskow"><img src="images/pic04.png" alt="" /></a></span>
 							<h3>Beeskow</h3>
-							<p>Jeden ersten Samstag im Monat 14-17 Uhr <br>in der <a href="https://burg-beeskow.de">Burg Beeskow</a>.</p>
-							<p><i>Momentan pausiert - hoffentlich bald wieder!</i></p>
+							<!-- <p>Jeden ersten Samstag im Monat 14-17 Uhr <br>in der <a href="https://burg-beeskow.de">Burg Beeskow</a>.</p> -->
+							<p><i>Momentan pausiert - Wir brauchen noch Unterstützer*innen!</i></p>
               <!-- <p><strong>Wir suchen noch ehrenamtliche Mentor*innen in Beeskow!</strong></p> -->
 							<ul class="actions special">
 								<li><a href="https://zen.coderdojo.com/dojos/de/beeskow/beeskow" class="button primary" target="_blank">Mitmachen</a></li>
@@ -351,7 +350,7 @@
 					<li><a href="mailto:oderdojo@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; 2019</li>
+					<li>&copy; 2022</li>
 					<li><a href="https://neuland21.de/impressum">Impressum</a></li>
 					<li><a href="https://neuland21.de/datenschutz">Datenschutz</a></li>
 					<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
