--- a/material.html
+++ b/material.html
@@ -38,26 +38,22 @@
         <div class="row gtr-150">
           <div class="col-3 col-12-xsmall">
             <span class="image fit" style="width: 150px">
-              <img src="images/Scratchlogo.png" alt="Scratch" style="object-fit: contain">
-              <a href="https://scratch.mit.edu/" target="_blank">Direkt zu Scratch</a>
+              <a href="https://scratch.mit.edu/" target="_blank"> <img src="images/Scratchlogo.png" alt="Scratch" style="object-fit: contain">Direkt zu Scratch</a>
             </span>
           </div>
            <div class="col-3 col-12-xsmall">
             <span class="image fit" style="width: 150px">
-              <img src="images/trinket-logo.png" alt="trinket" style="object-fit: contain">
-              <a href="https://trinket.io/" target="_blank">Direkt zu trinket.io</a>
+              <a href="https://trinket.io/" target="_blank"><img src="images/trinket-logo.png" alt="trinket" style="object-fit: contain">Direkt zu trinket.io</a>
             </span>
           </div>
           <div class="col-3 col-12-xsmall">
             <span class="image fit" style="width: 150px">
-              <img src="images/calliope.png" alt="trinket" style="object-fit: contain">
-              <a href="https://calliope.cc/projekte" target="_blank">Projekte mit dem Calliope</a>
+              <a href="https://calliope.cc/projekte" target="_blank"><img src="images/calliope.png" alt="trinket" style="object-fit: contain">Projekte mit dem Calliope</a>
             </span>
           </div>
           <div class="col-3 col-12-xsmall">
             <span class="image fit" style="width: 150px">
-              <img src="images/minecraft.webp" alt="trinket" style="object-fit: contain">
-              <a href="https://code.org/minecraft" target="_blank">Minecraft Tutorials</a>
+              <a href="https://code.org/minecraft" target="_blank"><img src="images/minecraft.webp" alt="trinket" style="object-fit: contain">Minecraft Tutorials</a>
             </span>
           </div>
         </div>
@@ -67,8 +63,7 @@
       <section id="one" class="main style1">
 				<div class="container">
 					<div class="col-8 col-12-small">
-							<h4>Hier findest du eine Sammlung an Lernmaterialien, mit denen du dich während des CoderDojos
-              (und natürlich auch jederzeit zu Hause) beschäftigen kannst.</h4>
+							<h4>Hier findest du noch eine etwas ausführlichere Sammlung an Lernmaterialien, mit denen du dich während des CoderDojos (und natürlich auch jederzeit zu Hause) beschäftigen kannst.</h4>
 					</div>
 
 					<div class="row gtr-150">	
@@ -116,7 +111,7 @@
 					<li><a href="mailto:oderdojo@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; 2019</li>
+					<li>&copy; 2022</li>
 					<li><a href="https://neuland21.de/impressum">Impressum</a></li>
 					<li><a href="https://neuland21.de/datenschutz">Datenschutz</a></li>
 					<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
