--- a/material.html
+++ b/material.html
@@ -127,5 +127,9 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 
+<a title="Privacy-friendly Web Analytics" href="https://clicky.com/101379861"><img alt="Clicky" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
+<script async src="//static.getclicky.com/101379861.js"></script>
+<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101379861ns.gif" /></p></noscript>
+
 	</body>
 </html>
