--- a/material.html
+++ b/material.html
@@ -115,6 +115,7 @@
 					<li><a href="https://neuland21.de/impressum">Impressum</a></li>
 					<li><a href="https://neuland21.de/datenschutz">Datenschutz</a></li>
 					<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li><a title="Privacy-friendly Web Analytics" href="https://clicky.com/101379861"><img alt="Clicky" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a></li>
 
 				</ul>
 			</section>
@@ -127,9 +128,8 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 
-<a title="Privacy-friendly Web Analytics" href="https://clicky.com/101379861"><img alt="Clicky" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
-<script async src="//static.getclicky.com/101379861.js"></script>
-<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101379861ns.gif" /></p></noscript>
+			<script async src="//static.getclicky.com/101379861.js"></script>
+			<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101379861ns.gif" /></p></noscript>
 
 	</body>
 </html>
