Fix location Frankfurt

--- a/index.html
+++ b/index.html
@@ -111,6 +111,14 @@
 
 					<div class="row gtr-150">
 						<div class="col-4 col-12-small">
+							<span class="image city"><a href="https://zen.coderdojo.com/dojos/de/frankfurt-oder/frankfurt-oder"><img src="images/pic02.png" alt="" /></a></span>
+							<h3>Frankfurt (Oder)</h3>
+							<p>Jeden zweiten Samstag im Monat 14-17 Uhr <br>im <a href="https://www.unser-stadtplan.de/Stadtplan/Frankfurt-Oder-/Partner/Stubicer-Str-8/City-Treff-bez-granic.map">CityTreff</a>. </p>
+							<ul class="actions special">
+								<li><a href="https://zen.coderdojo.com/dojos/de/frankfurt-oder/frankfurt-oder" class="button" target="_blank">Anmelden</a></li>
+							</ul>
+						</div>
+						<div class="col-4 col-12-small">
 							<span class="image city"><a href="https://zen.coderdojo.com/dojos/de/bad-belzig/potsdam-mittelmark-bad-belzig-wiesenburg-brandenburg"><img src="images/trollberg.png" alt="" /></a></span>
 							<h3>Bad Belzig</h3>
 							<p>Jeden zweiten Freitag 15-17 Uhr <br>im AWO Familienzentrum im TRollberg</p>
@@ -150,14 +158,7 @@
                 <li><a href="https://www.stiftung-job.de/freizeit-mehr/mobile-jugendarbeit-michendorf/" class="button" target="_blank">Anfahrt & Kontakt</a></li>
               </ul>
             </div>
-						<div class="col-4 col-12-small">
-							<span class="image city"><a href="https://zen.coderdojo.com/dojos/de/frankfurt-oder/frankfurt-oder"><img src="images/pic02.png" alt="" /></a></span>
-							<h3>Frankfurt (Oder)</h3>
-							<p>Jeden zweiten Samstag im Monat 14-17 Uhr <br>im <a href="https://blok-o.de">Blok O</a>. <br> <i>Dieses Mal beim Tag der offenen Tür am IHP!</i> </p>
-							<ul class="actions special">
-								<li><a href="https://zen.coderdojo.com/dojos/de/frankfurt-oder/frankfurt-oder" class="button" target="_blank">Anmelden</a></li>
-							</ul>
-						</div>
+						
 						<div class="col-4 col-12-small">
 							<span class="image city"><a href="https://zen.coderdojo.com/dojos/de/letschin/oderbruch"><img src="images/pic03.jpg" alt=""/></a></span>
 							<h3>Letschin</h3>
