ein paar Updates

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						</div>
 						<div class="col-8 col-12-small">
 							<p>Genaueres dazu, wie CoderDojos funktionieren, könnt ihr auf <strong><a href="https://coderdojo.com/de-DE">der zentralen Seite der Bewegung</a></strong> lesen.</p>
-							<p>Mittlerweile gibt es schon einige Dojos von uns: eins in <strong>Frankfurt (Oder)</strong>, jeweils eins in <strong>Letschin</strong> und in <strong>Beeskow</strong> (die leider gerade noch auf engagierte Mentor*innen warten!) und jetzt auch zusammen mit <a href="https://neuland21.de">Neuland21</a> neue Dojos in <strong>Bad Belzig</strong>, <strong>Wiesenburg</strong> und <strong>Brandenburg an der Havel</strong>! Wir treffen uns normalerweise ein- bis zweimal im Monat.</p>
+							<p>Mittlerweile gibt es schon einige Dojos von uns: eins in <strong>Frankfurt (Oder)</strong>, jeweils eins in <strong>Letschin</strong> und in <strong>Beeskow</strong> (die leider gerade noch auf engagierte Mentor*innen warten!) und jetzt auch zusammen mit <a href="https://neuland21.de">Neuland21</a> Dojos in <strong>Bad Belzig</strong>, weiteren Standorten im <strong>Fläming</strong> und <strong>Brandenburg an der Havel</strong>! Wir treffen uns normalerweise ein- bis zweimal im Monat.</p>
 						</div>
 					</div>
 				<!-- 	<header class="major" style="text-align:center">
@@ -147,15 +147,15 @@
 							<h3>Brandenburg an der Havel</h3>
 							<p>Jeden zweiten Dienstag 16-18 Uhr <br>in der Fouqué-Bibliothek Brandenburg</p>
 							<ul class="actions special">
-								<li><a href="https://zen.coderdojo.com/dojos/de/brandenburg-an-der-havel/brandenburg-an-der-havel-fouque-bibliothek" class="button" target="_blank">Anmelden</a></li>
+								<li><a href="https://www.eventbrite.de/e/coderdojo-brandenburg-an-der-havel-tickets-136603870855" class="button" target="_blank">Anmelden</a></li>
 							</ul>
 						</div>
             <div class="col-4 col-12-small">
               <span class="image city"><a href="https://www.stiftung-job.de/freizeit-mehr/mobile-jugendarbeit-michendorf/"><img src="images/michendorf.jpg" alt="" /></a></span>
               <h3>Michendorf</h3>
-              <p>Jeden zweiten Donnerstag 15-17 Uhr <br>im Jugendtreff Michendorf</p>
+              <p>Jeden zweiten Donnerstag 15-17 Uhr <br>im <a href="https://www.stiftung-job.de/freizeit-mehr/mobile-jugendarbeit-michendorf/">Jugendtreff Michendorf</a></p>
               <ul class="actions special">
-                <li><a href="https://www.stiftung-job.de/freizeit-mehr/mobile-jugendarbeit-michendorf/" class="button" target="_blank">Anfahrt & Kontakt</a></li>
+                <li><a href="https://neuland21.de/projekte/coderdojo/" class="button" target="_blank">Mehr Info</a></li>
               </ul>
             </div>
 						
@@ -256,7 +256,7 @@
             </div>
             <div class="col-3 col-12-xsmall">
               <span class="image fit"><img src="images/de.png" ></span>
-              <p><a href="https://www.digitalengagiert.de/"></a>Digital engagiert</p>
+              <p><a href="https://www.digitalengagiert.de/">Digital Engagiert</a></p>
             </div>
             <div class="col-3 col-12-xsmall">
               <span class="image fit"><img src="images/Logo_pfd.jpeg"></span>
