--- a/material.html
+++ b/material.html
@@ -77,7 +77,7 @@
           
           <div class="col-3 col-12-xsmall">
             <span class="image fit" style="width: 150px">
-              <a href="https://makeymakey.com/pages/plug-and-play-makey-makey-apps" target="_blank"> <img src="images/makey.png" alt="Makey" style="object-fit: contain">Spaß mit Makey Makey</a>
+              <a href="https://hedy.org/hedy?keyword_language=de" target="_blank"> <img src="images/hedy.jpg" alt="Hedy" style="object-fit: contain">Von Scratch zu Code mit Hedy</a>
             </span>
           </div>    
           <div class="col-3 col-12-xsmall">
@@ -105,6 +105,11 @@
               <a href="https://trinket.io/" target="_blank"><img src="images/trinket-logo.png" alt="trinket" style="object-fit: contain">Direkt zu trinket.io</a>
             </span>
           </div>
+          <div class="col-3 col-12-xsmall">
+            <span class="image fit" style="width: 150px">
+              <a href="https://makeymakey.com/pages/plug-and-play-makey-makey-apps" target="_blank"> <img src="images/makey.png" alt="Makey" style="object-fit: contain">Spaß mit Makey Makey</a>
+            </span>
+          </div>   
         </div>
       </div>
     </section>
