--- a/material.html
+++ b/material.html
@@ -102,7 +102,7 @@
           
           <div class="col-3 col-12-xsmall">
             <span class="image fit" style="width: 150px">
-              <a href="https://trinket.io/" target="_blank"><img src="images/trinket-logo.png" alt="trinket" style="object-fit: contain">Direkt zu trinket.io</a>
+              <a href="https://trinket.io/embed/python/8246cbdb0d" target="_blank"><img src="images/trinket-logo.png" alt="trinket" style="object-fit: contain">Direkt zu trinket.io</a>
             </span>
           </div>
           <div class="col-3 col-12-xsmall">
