--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
 						<div class="col-4 col-12-small">
 							<span class="image city"><a href="https://zen.coderdojo.com/dojos/de/frankfurt-oder/frankfurt-oder"><img src="images/pic02.png" alt="" /></a></span>
 							<h3>Frankfurt (Oder)</h3>
-							<p>Jeden zweiten Samstag im Monat 14-17 Uhr <br>im <a href="https://www.unser-stadtplan.de/Stadtplan/Frankfurt-Oder-/Partner/Stubicer-Str-8/City-Treff-bez-granic.map">CityTreff</a>. </p>
+							<p>Jeden zweiten Samstag im Monat 14-17 Uhr <br>in der <a href="https://goo.gl/maps/n4RHAkxcEdgkLXiH9">Magistrale</a>. </p>
 							<ul class="actions special">
-								<li><a href="https://zen.coderdojo.com/dojos/de/frankfurt-oder/frankfurt-oder" class="button" target="_blank">Anmelden</a></li>
+								<li><a href="https://zen.coderdojo.com/dojos/de/frankfurt-oder/frankfurt-oder" class="button" target="_blank">Anmelden 14. Januar 2023</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-small">
