--- a/material.html
+++ b/material.html
@@ -91,7 +91,7 @@
        <div class="row gtr-150">
           <div class="col-3 col-12-xsmall">
             <span class="image fit" style="width: 150px">
-              <a href="https://scratch.mit.edu/" target="_blank"> <img src="images/scratch-cat.png" alt="Scratch" style="object-fit: contain">Direkt zu Scratch</a>
+              <a href="https://scratch.mit.edu/projects/editor/" target="_blank"> <img src="images/scratch-cat.png" alt="Scratch" style="object-fit: contain">Direkt zu Scratch</a>
             </span>
           </div>
           <div class="col-3 col-12-xsmall">
