--- a/material.html
+++ b/material.html
@@ -182,7 +182,7 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 
-			<script async src="//static.getclicky.com/101379861.js"></script>
+			<script async data-id="101379861" src="//static.getclicky.com/js"></script>
 			<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/101379861ns.gif" /></p></noscript>
 
 	</body>
