--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 							<h3>Frankfurt (Oder)</h3>
 							<p>Jeden dritten Samstag im Monat 14-17 Uhr <br>im <a href="https://blok-o.de/">Blok O</a>. </p>
 							<ul class="actions special">
-								<li><a href="https://zen.coderdojo.com/dojos/de/frankfurt-oder/frankfurt-oder" class="button" target="_blank">Anmelden 24. Februar 2024</a></li>
+								<li><a href="https://zen.coderdojo.com/dojos/de/frankfurt-oder/frankfurt-oder" class="button" target="_blank">Anmelden 23. März 2024</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-small">
