--- a/material.html
+++ b/material.html
@@ -128,7 +128,11 @@
               <a href="https://projects.raspberrypi.org/de-DE/projects?software[]=html-css-javascript" target="_blank"><img src="images/html.jpg" alt="HTML-CSS" style="object-fit: contain">Webseiten mit HTML & CSS</a>
             </span>
           </div>
-            
+            <div class="col-3 col-12-xsmall">
+            <span class="image fit" style="width: 150px">
+              <a href="https://hourofpython.trinket.io/from-blocks-to-code-with-trinket" target="_blank"> <img src="images/trinket-logo.png" alt="trinket" style="object-fit: contain">Trinket Kurs: Blocks to Python (englisch)</a>
+            </span>
+          </div>   
           
         </div>
 
