--- a/material.html
+++ b/material.html
@@ -133,7 +133,15 @@
               <a href="https://hourofpython.trinket.io/from-blocks-to-code-with-trinket" target="_blank"> <img src="images/trinket-logo.png" alt="trinket" style="object-fit: contain">Trinket Kurs: Blocks to Python (englisch)</a>
             </span>
           </div>   
-          
+        </div>
+
+	      <div class="row gtr-150">
+       		<div class="col-3 col-12-xsmall">
+            <span class="image fit" style="width: 150px">
+              <a href="https://astro-pi.org/de/mission-zero" target="_blank"><img src="images/astro.svg" alt="Astro Pi" style="object-fit: contain">Astro Pi Mission Zero</a>
+            </span>
+          </div>
+         
         </div>
 
       </div>
