--- a/material.html
+++ b/material.html
@@ -141,7 +141,16 @@
               <a href="https://astro-pi.org/de/mission-zero" target="_blank"><img src="images/astro.svg" alt="Astro Pi" style="object-fit: contain">Astro Pi Mission Zero</a>
             </span>
           </div>
-         
+         <div class="col-3 col-12-xsmall">
+            <span class="image fit" style="width: 150px">
+              <a href="https://makecode.microbit.org/#editor" target="_blank"><img src="images/microbit.png" alt="MicroBit" style="object-fit: contain">Micro:Bit</a>
+            </span>
+          </div>
+	<div class="col-3 col-12-xsmall">
+            <span class="image fit" style="width: 150px">
+              <a href="https://app.edublocks.org/project/new" target="_blank"><img src="images/edublocks.jpg" alt="Edublocks" style="object-fit: contain">Edublocks</a>
+            </span>
+          </div>	      
         </div>
 
       </div>
