--- a/material.html
+++ b/material.html
@@ -143,7 +143,7 @@
           </div>
          <div class="col-3 col-12-xsmall">
             <span class="image fit" style="width: 150px">
-              <a href="https://makecode.microbit.org/#editor" target="_blank"><img src="images/microbit.png" alt="MicroBit" style="object-fit: contain">Micro:Bit</a>
+              <a href="https://makecode.microbit.org/#editor" target="_blank"><img src="images/microbit.png" alt="MicroBit" style="object-fit: contain">Micro:Bit Editor</a>
             </span>
           </div>
 	<div class="col-3 col-12-xsmall">
