Update index.html März

--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
 						<div class="col-4 col-12-small">
 							<span class="image city"><a href="https://zen.coderdojo.com/dojos/de/frankfurt-oder/frankfurt-oder"><img src="images/pic02.png" alt="" /></a></span>
 							<h3>Frankfurt (Oder)</h3>
-							<p>Jeden zweiten Samstag im Monat 14-17 Uhr <br>im <a href="https://blok-o.de/">Blok O</a>. </p>
+							<p>Jeden zweiten Freitag im Monat 14-17 Uhr <br>im <a href="https://blok-o.de/">Blok O</a>. </p>
 							<ul class="actions special">
-								<li><a href="https://zen.coderdojo.com/dojos/de/frankfurt-oder/frankfurt-oder" class="button" target="_blank">Anmelden 11. Januar 2025</a></li>
+								<li><a href="https://zen.coderdojo.com/dojos/de/frankfurt-oder/frankfurt-oder" class="button" target="_blank">Anmelden 14. März 2025</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-small">
